# piper

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  piper.conf
include/: pipe.h
src/: main.cpp  pipe.cpp
